NAS-112435: Avoid button overlap

--- a/src/assets/styles/other/_tn-styles.scss
+++ b/src/assets/styles/other/_tn-styles.scss
@@ -623,6 +623,7 @@ $primary-dark: darken(map-get($md-primary, 500), 8%);
         background: white;
         border: 1px solid #ddd;
         color: black;
+        max-height: calc(100% - 64px);
         min-height: 100px;
         overflow: auto;
         padding: 1rem;
